[project]
name = "muni-transit-display"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.2"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "httpx-retry>=2025.4.23",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "rgbmatrixemulator>=0.13.3",
    "ruff>=0.12.11",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"] # Enable Error, Flake8, Warning, and Isort rules
ignore = ["E501"] # Ignore line length errors
